--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,27 +1,81 @@
-html,
-body {
+html
+{
     height: 100%;
 }
 
-h1,
-p{
+body{
+    height: 100%;
     margin: 0;
+    background-color: #bbeaff;
+}
+
+h1,
+p {
+    margin: 0;
+}
+
+.main-area{
+    font-family: sans-serif;
+    margin: 0 auto;
+    max-width: 1512px;
 }
 
 .header{
     background-color: #ffffff;
-    padding:10px 20px;
+}
+
+.header__inner{
+    max-width: 1512px;
+    margin: 0 auto;
+    padding: 10px 20px;
 }
 
 .header-logo{
     color:#F5C800;
-    
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-style: italic;
+    font-size: 30px;
 }
 
 .heading{
+    max-width: 1512px;
+    margin-bottom: 20px;
+    padding-top:70px;
+}
 
+.heading__inner{
+    padding: 0 40px;
+    display: flex;
+    justify-content: space-between;
+    height:50px;
+}
+
+.products__header{
+    font-size: 32px;
+    font-weight: bold;
+    color: #333333;
+}
+
+.register__header {
+    width:760px;
+    font-size: 32px;
+    font-weight: bold;
+    color: #333333;
+    margin:0 auto;
 }
 
 .contents{
+    max-width: 1512px;
+}
 
+a{
+    text-decoration: none;
+}
+
+.register-form__error,
+.detail-form__error{
+    margin-top: 10px;
+    color: #FD0707;
+    font-size: 14px;
+    line-height: 1.5;
 }
