--- a/src/public/css/details.css
+++ b/src/public/css/details.css
@@ -33,6 +33,10 @@
     padding-top: 30px;
 }
 
+.detail-form__input--group {
+    display: flex;
+}
+
 .detail-form__label {
     font-size: 16px;
     color: #4B4B4B;
@@ -52,8 +56,12 @@
     outline: none;
     padding: 10px;
     font-size: 14px;
-    color: #E0DFDE;
+    color: #333333;
 
+}
+
+.detail-form__checkbox{
+    display: flex;
 }
 
 .detail-form__input--checkbox {
@@ -75,6 +83,7 @@
 .detail-form__button {
     margin-top: 30px;
     text-align: center;
+    padding-bottom: 70px;
 }
 
 .detail-form__button--back,
@@ -88,6 +97,10 @@
     outline: none;
     font-weight: bold;
     cursor: pointer;
+}
+
+.detail-form__input--textarea{
+    line-height: 1.5;
 }
 
 .detail-form__button--back {
