--- a/src/public/css/products.css
+++ b/src/public/css/products.css
@@ -33,10 +33,11 @@
     height:50px;
     border-radius: 25px;
     border: 1px solid #E0DFDE;
-    color: #E0DFDE;
+    color: #333333;
     font-size: 14px;
     padding-left: 10px;
     border: none;
+    outline: none;
 }
 
 .search-form__button{
@@ -49,6 +50,7 @@
     border-radius: 5px;
     border: none;
     cursor: pointer;
+    margin-bottom: 40px;
 }
 
 .products-sort__header{
@@ -62,7 +64,7 @@
     width:100%;
     height:45px;
     border: 1px solid #E0DFDE;
-    color: #E0DFDE;
+    color: #333333;
     font-size: 14px;
     padding-left: 10px;
     border: none;
@@ -70,11 +72,12 @@
 
 .contents__products{
     width: 1162px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .products-group{
-    display: flex;
-    justify-content: space-between;
     margin-bottom: 20px;
 }
 
